# endpoints

./: .claude.local.md  .gitattributes  .gitignore  .gitlab-ci.yml  .nvimrc.lua  .pre-commit-config.yaml  .syncignore  ADVERSARIAL_TEST_CASES.md  ADVERSARIAL_TEST_RESULTS.md  AGENTS.md  ATTRIBUTION  BLOCKER_FIX_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  DATASET_PRESET_TESTING.md  DATASET_SCHEMA_REFERENCE.md  DATASET_TESTING_SUMMARY.md  HYBRID_SCHEDULER_GUIDE.md  LICENSE  MULTI_TURN_QUICKSTART.md  README.md  accuracy_only_support.md  constraints.txt  endpoints_changed.md  pr_255_followup.md  pyproject.toml  review-council-output.md  supatest.py
examples/09_Wan22_VideoGen_Example/accuracy/: RUNBOOK.md  prefetch_weights.py  pyproject.toml  vbench_runner.py
src/endpoints_db/: API.md  generate_openapi.py  main.py  openapi.json  pyproject.toml
src/endpoints_db/.devcontainer/: devcontainer.json  docker-compose.yml
src/endpoints_db/.specstory/: .project.json  statistics.json
src/endpoints_db/.specstory/history/: 2026-05-04_12-00-53Z-use-devcontainers-and-fastapi.md
src/endpoints_db/app/: auth.py  database.py  main.py  models.py  schemas.py
src/endpoints_db/app/routers/: runs.py  submissions.py
src/endpoints_db/cli/: api.py  auth.py  config.py  main.py
src/endpoints_db/cli/commands/: benchmark.py  runs.py  submission.py
src/endpoints_db/migrations/: 001_init.sql
src/endpoints_db/tests/: conftest.py  test_runs.py  test_submissions.py
src/submission_checker/: .gitignore  README.md  pyproject.toml
src/submission_checker/.github/workflows/: ci.yml
src/submission_checker/.specstory/: .project.json  statistics.json
src/submission_checker/.specstory/history/: 2026-05-14_14-22-50Z-remove-the-submissions-folder.md
src/submission_checker/docs/: api.rst  conf.py  index.rst
src/submission_checker/src/: __init__.py  checker.py  cli.py  loader.py  structure.py
src/submission_checker/src/models/: __init__.py  context.py  regions.py  results.py  run_config.py  run_result.py  system.py
src/submission_checker/src/models/aggregate/: __init__.py  context.py  point_result.py
src/submission_checker/src/models/file/: __init__.py  accuracy.py  point_config.py  point_summary.py
src/submission_checker/src/submission_checker/: checker.py  loader.py  structure.py
src/submission_checker/src/submission_checker/models/: __init__.py  context.py  run_config.py  run_result.py
src/submission_checker/test_submissions/invalid_submission/pareto/bad_system/llama3-70b/accuracy/: accuracy.txt  accuracy_result.json
src/submission_checker/test_submissions/invalid_submission/pareto/bad_system/llama3-70b/points/: point_16.yaml  point_38.yaml  point_88.yaml
src/submission_checker/test_submissions/invalid_submission/systems/: bad_system.json
src/submission_checker/test_submissions/sub_a/pareto/sys_mi355x_8gpu/gpt-oss-120b/points/: point_4.yaml
src/submission_checker/test_submissions/sub_a/systems/: sys_mi355x_8gpu.json
src/submission_checker/test_submissions/sub_b/systems/: sys_mi355x_16gpu.json
src/submission_checker/test_submissions/sub_c/pareto/sys_tpu_4chip/qwen3-coder-480b/accuracy/: accuracy.txt
src/submission_checker/test_submissions/sub_c/pareto/sys_tpu_4chip/qwen3-coder-480b/points/: point_64.yaml
src/submission_checker/test_submissions/sub_c/systems/: sys_tpu_4chip.json
src/submission_checker/test_submissions/sub_d/pareto/sys_tpu_8chip/qwen3-coder-480b/points/: point_8.yaml
src/submission_checker/test_submissions/sub_d/systems/: sys_tpu_8chip.json
src/submission_checker/test_submissions/sub_e/pareto/sys_gaudi_dp1/llama3-8b/points/: point_2.yaml
src/submission_checker/test_submissions/sub_e/pareto/sys_gaudi_dp1/llama3-8b/runs/: run_1024.yaml  run_4.yaml  run_64.yaml
src/submission_checker/test_submissions/sub_e/systems/: sys_gaudi_dp1.json
src/submission_checker/test_submissions/sub_f/pareto/sys_gaudi_dp2/llama3-8b/points/: point_1.yaml  point_128.yaml  point_16.yaml  point_256.yaml
src/submission_checker/test_submissions/sub_f/pareto/sys_gaudi_dp2/llama3-8b/runs/: run_1.yaml  run_16.yaml  run_2.yaml  run_32.yaml
src/submission_checker/test_submissions/sub_f/systems/: sys_gaudi_dp2.json
src/submission_checker/test_submissions/sub_g/pareto/sys_8gpu_vllm/llama3-70b/points/: point_1536.yaml  point_192.yaml  point_2048.yaml  point_768.yaml
src/submission_checker/test_submissions/sub_g/systems/: sys_8gpu_vllm.json
src/submission_checker/test_submissions/sub_h/pareto/sys_8gpu_sglang/llama3-70b/points/: point_1024.yaml  point_384.yaml  point_512.yaml
src/submission_checker/test_submissions/sub_h/pareto/sys_8gpu_sglang/llama3-70b/runs/: run_1536.yaml  run_192.yaml  run_256.yaml  run_384.yaml  run_512.yaml  run_768.yaml
src/submission_checker/test_submissions/sub_h/systems/: sys_8gpu_sglang.json
src/submission_checker/test_submissions/sub_i/pareto/sys_h200_8gpu/deepseek-r1/accuracy/: accuracy_result.json
src/submission_checker/test_submissions/sub_i/pareto/sys_h200_8gpu/deepseek-r1/runs/: run_8.yaml
src/submission_checker/test_submissions/sub_i/systems/: sys_h200_8gpu.json
src/submission_checker/test_submissions/sub_j/pareto/sys_gb300_72gpu/deepseek-r1/points/: point_16384.yaml  point_32.yaml  point_4096.yaml  point_8192.yaml
src/submission_checker/test_submissions/sub_j/pareto/sys_gb300_72gpu/deepseek-r1/runs/: run_128.yaml  run_16384.yaml  run_2048.yaml  run_4096.yaml  run_8192.yaml
src/submission_checker/test_submissions/sub_j/systems/: sys_gb300_72gpu.json
src/submission_checker/test_submissions/valid_standardized/documentation/: calibration.adoc
src/submission_checker/test_submissions/valid_standardized/pareto/acme_h100x8_001/llama3-70b/accuracy/: accuracy.txt  accuracy_result.json
src/submission_checker/test_submissions/valid_standardized/pareto/acme_h100x8_001/llama3-70b/points/: point_1000.yaml  (+3 more)
src/submission_checker/test_submissions/valid_standardized/systems/: acme_h100x8_001.json
src/submission_checker/tests/: conftest.py  test_checker.py  test_checks.py  test_cli.py  test_loader.py  test_models.py  test_regions.py
(+838 files in other folders)
