[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-endpoint"
version = "0.1.0"
description = "High-performance LLM endpoint benchmarking system with 50k QPS capability"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLPerf Inference Endpoint Team"}
]
keywords = ["mlperf", "benchmarking", "llm", "endpoint", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
requires-python = ">=3.12"
dependencies = [
    "asyncio",
    "typing-extensions>=4.0.0",
    "orjson==3.11.5",
    "pyzmq==27.1.0",
    "uvloop==0.22.1",
    "msgspec==0.20.0",
    "httptools==0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist==3.8.0",
    "PyYAML>=6.0",
]
performance = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
]

[project.scripts]
inference-endpoint = "inference_endpoint.main:run"

[project.urls]
Homepage = "https://github.com/mlperf/inference-endpoint"
Documentation = "https://github.com/mlperf/inference-endpoint#readme"
Repository = "https://github.com/mlperf/inference-endpoint.git"
Issues = "https://github.com/mlperf/inference-endpoint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.autopep8]
max_line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "tests/datasets/*",
    "src/inference_endpoint/openai/openai_types_gen.py",
    "src/inference_endpoint/openai/openapi.yaml",
    "datasets/*",
    "datasets/",
]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff-format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
timeout = 300
timeout_func_only = true
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-m not run_explicitly",
]
markers = [
    "slow: marks tests as slow (skip in CI)",
    "performance: marks tests as performance tests (skip in CI) - no timeout",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "run_explicitly: mark test to only run explicitly",
]
filterwarnings = [
    "ignore:Session timeout reached:RuntimeWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/\\.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\):",
    "@(abc\\\\.)?abstractmethod",
]
