[build-system]
requires = ["setuptools==68.1.2", "wheel==0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-endpoint"
version = "0.1.0"
description = "High-performance LLM endpoint benchmarking system with 50k QPS capability"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLPerf Inference Endpoint Team"}
]
keywords = ["mlperf", "benchmarking", "llm", "endpoint", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
requires-python = ">=3.12"
dependencies = [
    # Core Python dependencies
    "typing-extensions==4.15.0",
    # System utilities
    "psutil==6.1.1",
    # Async and networking
    "pyzmq==27.1.0",
    "uvloop==0.22.1",
    "httptools==0.7.1",
    "websocket-client==1.9.0",
    # Data handling
    "duckdb==1.4.0",
    "msgspec==0.20.0",
    "pydantic==2.12.0",
    "pydantic_core==2.41.1",
    # YAML/CLI from Pydantic Schema
    "cyclopts==4.10.0",
    "rich==14.3.3",
    # Needed for tokenization and OSL reporting
    "transformers==4.57.1",
    "numpy==2.3.4",
    "datasets==4.1.1",
    "Pillow==12.1.1",
    "sentencepiece==0.2.1",
    "protobuf==6.33.5",
    "openai_harmony==0.0.8",
    # Color support for cross-platform terminals
    "colorama==0.4.6",
    # Fix pytz-2024 import warning
    "pytz==2026.1.post1",
]

[project.optional-dependencies]
sql = [
    # SQL event logger (swappable backends, default sqlite)
    "sqlalchemy==2.0.48",
]
dev = [
    # Code quality
    "ruff==0.11.8",
    # Development tools
    "pre-commit==4.2.0",
    # Profiling tools
    "line-profiler==5.0.0",
    "Pympler==1.1",
    # Documentation
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints==3.1.0",
    "myst-parser==4.0.1",
    # Security auditing
    "pip-audit==2.10.0",
]
test = [
    # Includes optional dependencies for full test coverage
    "inference-endpoint[sql]",
    # Testing framework
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-benchmark==5.2.3",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    # Test utilities
    "coverage==7.13.4",
    "line-profiler==5.0.0",
    "Pympler==1.1",
    "scipy==1.16.3",
    # HTTP server and client for mock server fixture
    "aiohttp==3.13.3",
    # Plotting for benchmark sweep mode
    "matplotlib==3.10.8",
]
performance = [
    "pytest-benchmark==5.2.3",
    "memory-profiler==0.61.0",
]

[project.scripts]
inference-endpoint = "inference_endpoint.main:run"

[project.urls]
Homepage = "https://github.com/mlperf/inference-endpoint"
Documentation = "https://github.com/mlperf/inference-endpoint#readme"
Repository = "https://github.com/mlperf/inference-endpoint.git"
Issues = "https://github.com/mlperf/inference-endpoint/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
inference_endpoint = ["config/templates/*.yaml"]

[tool.setuptools.exclude-package-data]
"inference_endpoint.evaluation.livecodebench" = ["_server.py"]

[tool.autopep8]
max_line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "tests/datasets/*",
    "src/inference_endpoint/openai/openai_types_gen.py",
    "src/inference_endpoint/openai/openapi.yaml",
    "datasets/*",
    "datasets/",
]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff-format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
timeout = 300
timeout_func_only = true
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-m not run_explicitly",
]
markers = [
    "slow: marks tests as slow (skip in CI)",
    "performance: marks tests as performance tests (skip in CI) - no timeout",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "run_explicitly: mark test to only run explicitly",
]
filterwarnings = [
    "ignore:Session timeout reached:RuntimeWarning",
]

[tool.coverage.run]
source = ["src"]
concurrency = ["multiprocessing", "thread"]
parallel = true
sigterm = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/\\.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\):",
    "@(abc\\\\.)?abstractmethod",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "openai_types_gen\\.py$",
    "metrics/reporter\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "inference_endpoint.openai.openai_types_gen",
    "inference_endpoint.metrics.reporter",
]
ignore_errors = true
