[project]
name = "mlperf-submission-api"
version = "0.1.0"
description = "MLPerf submission CRUD API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "typer==0.15.1",
    "httpx==0.27.2",
]

[project.scripts]
inference-endpoint = "cli.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==7.1.0",
    "httpx==0.27.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==7.1.0",
    "openapi-markdown==0.4.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
concurrency = ["greenlet"]
source = ["app"]

[tool.coverage.report]
show_missing = true
